Fix nav getting stuck when navigating, add potential hover state for mobile nav.

--- a/styles/global/header.scss
+++ b/styles/global/header.scss
@@ -126,6 +126,10 @@
 
   &:hover {
     text-decoration: none;
+
+    &:after {
+      transform: scaleX(1);
+    }
     @media (min-width: $desktop) {
       color: $black;
 
